--- a/Steganography and Cryptography/Program interface/task-info.yaml
+++ b/Steganography and Cryptography/Program interface/task-info.yaml
@@ -56,6 +56,45 @@ files:
     }
 
   learner_created: false
+- name: src/cryptography/console/Runner.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/console/Application.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/console/command/Command.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/console/command/CommandExit.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/console/command/CommandUnknown.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/console/command/CommandFactory.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/console/command/CommandFactoryImpl.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/console/ConsoleHelpers.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/console/command/CommandHide.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/console/command/CommandShow.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/console/controller/AppController.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/console/controller/AppControllerImpl.kt
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/160/stages/830/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 01 Nov 2021 15:06:54 UTC
 record: -1
