--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,11 +3,11 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/486907/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 01 Jan 1970 00:00:00 UTC
+update_date: Mon, 01 Nov 2021 14:20:53 UTC
 stages:
 - id: 830
   step: 12266
-  is_completed: false
+  is_completed: true
 - id: 831
   step: 12267
   is_completed: false
