--- a/Steganography and Cryptography/Read and Write image files/task-info.yaml
+++ b/Steganography and Cryptography/Read and Write image files/task-info.yaml
@@ -315,6 +315,27 @@ files:
 - name: test/testimage.png
   visible: false
   learner_created: false
+- name: src/cryptography/domain/usecase/Hide.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/application/interactor/HideImpl.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/domain/gateway/SecretImage.kt
+  visible: true
+  learner_created: true
+- name: src/cryptography/application/gateway/SecretImageImpl.kt
+  visible: true
+  learner_created: true
+- name: test/N.png
+  visible: true
+  learner_created: true
+- name: test/out.png
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/160/stages/831/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Tue, 02 Nov 2021 15:55:01 UTC
 record: -1
