--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/486907/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Tue, 02 Nov 2021 19:57:28 UTC
+update_date: Wed, 03 Nov 2021 06:46:35 UTC
 stages:
 - id: 830
   step: 12266
@@ -16,7 +16,7 @@ stages:
   is_completed: true
 - id: 833
   step: 12269
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Binary numbers
